# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/concurrent_links.gni")

declare_args() {
  # Pool for action tasks.
  action_pool_depth = 0
}

if (current_toolchain == default_toolchain) {
  pool("link_pool") {
    depth = concurrent_links
  }

  pool("action_pool") {
    depth = action_pool_depth
  }
}
