# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Toolchain-related configuration that may be needed outside the context of the
# toolchain() rules themselves.

declare_args() {
  # Clang install directory.
  # NOTE: This is currently only used on Windows!
  clang_base_path = ""

  # Enable Link Time Optimization in optimized builds (output programs run
  # faster, but linking is up to 5-20x slower).
  # Note: use target_os == "linux" rather than is_linux so that it does not
  # apply to host_toolchain when target_os="android".
  allow_posix_link_time_opt = false

  # Set to true to use lld, the LLVM linker. This flag may be used on Windows
  # with the shipped LLVM toolchain, or on Linux with a self-built top-of-tree
  # LLVM toolchain (see llvm_force_head_revision in
  # build/config/compiler/BUILD.gn).
  use_lld = false

  # How many symbols to include in the build. This affects the performance of
  # the build since the symbols are large and dealing with them is slow.
  #   2 means regular build with symbols.
  #   1 means minimal symbols, usually enough for backtraces only.
  #   0 means no symbols.
  symbol_level = 2
}

if (is_win && is_clang) {
  # On non-Windows we just assume the clang executables are on the path
  # and we're not using sanitizers etc.
  # TODO(tim): Add assertions
  assert(clang_base_path != "",
         "You must set clang_base_path when using Clang on Windows")
}

# If it wasn't manually set, set to an appropriate default.
assert(symbol_level >= 0 && symbol_level <= 2, "Invalid symbol_level")

# Extension for shared library files (including leading dot).
if (is_mac) {
  shlib_extension = ".dylib"
} else if (is_posix) {
  shlib_extension = ".so"
} else if (is_win) {
  shlib_extension = ".dll"
} else {
  assert(false, "Platform not supported")
}

# Prefix for shared library files.
if (is_posix) {
  shlib_prefix = "lib"
} else {
  shlib_prefix = ""
}

# While other "tool"s in a toolchain are specific to the target of that
# toolchain, the "stamp" and "copy" tools are really generic to the host;
# but each toolchain must define them separately.  GN doesn't allow a
# template instantiation inside a toolchain definition, so some boilerplate
# has to be repeated in each toolchain to define these two tools.  These
# four variables reduce the duplication in that boilerplate.
stamp_description = "STAMP {{output}}"
copy_description = "COPY {{source}} {{output}}"
if (host_os == "win") {
  stamp_path = rebase_path("//build/toolchain/win/stamp.py", root_build_dir)
  copy_path =
      rebase_path("//build/toolchain/win/recursive_mirror.py", root_build_dir)

  stamp_command = "$python_path $stamp_path {{output}}"
  copy_command = "$python_path $copy_path {{source}} {{output}}"
} else {
  stamp_command = "touch {{output}}"
  copy_command = "ln -f {{source}} {{output}} 2>/dev/null || (rm -rf {{output}} && cp -af {{source}} {{output}})"
}
